--- a/css/basic86.css
+++ b/css/basic86.css
@@ -1,30 +1,35 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-header{
+
+header {
     width: 100%;
     height: 150px;
     color: gray;
     background-color: rgba(0, 0, 0, 0.753);
 }
-header h1{
+
+header h1 {
     padding-left: 275px;
     padding-top: 25px;
     font-family: Georgia, "Times New Roman", Times, serif;
 }
-header p{
+
+header p {
     padding-left: 275px;
     font-family: Georgia, "Times New Roman", Times, serif;
 }
-.menu{
+
+.menu {
     display: inline-block;
     position: relative;
     top: -29px;
     left: 799px;
     background-color: black;
 }
-.menu ul li{
+
+.menu ul li {
     float: left;
     list-style: none;
     margin-left: 20px;
@@ -32,130 +37,146 @@ header p{
     padding-top: 10px;
     font-size: 12px;
 }
-.menu ul li a{
+
+.menu ul li a {
     color: gray;
     text-decoration: none;
 }
-.container{
+
+.container {
     width: 960px;
     margin: auto;
 }
-.content1{
+
+.content1 {
     margin-top: 20px;
 }
-.box{
+
+.box {
     background-color: gray;
     width: 300px;
     font-family: Georgia, "Times New Roman", Times, serif;
     float: left;
 }
-.box p{
+
+.box p {
     font-size: 12px;
     line-height: 2;
     padding-top: 6px;
 }
-.box h1{
+
+.box h1 {
     font-size: 38px;
 }
-.link{
+
+.link {
     margin-top: 60px;
     padding-bottom: 30px;
-    float:right;
+    float: right;
     color: rgb(238, 139, 73);
     text-decoration: none;
 }
 
-.link a{
+.link a {
     text-decoration: none;
 }
-.black_box{
+
+.black_box {
     height: 300px;
     width: 630px;
     float: left;
     margin-left: 20px;
-
 }
 
-
-.bottom{
+.bottom {
     color: gray;
     width: 1048px;
     /* height: 295px; */
     /* margin-left: 250px; */
     margin-top: 50px;
 }
-.sub_container{
+
+.sub_container {
     float: left;
     width: 300px;
     /* padding-left: 35px; */
     padding-right: 20px;
     font-family: Georgia, "Times New Roman", Times, serif;
-    
 }
-.text{
+
+.text {
     font-size: 13px;
     line-height: 20px;
     margin-top: 10px;
     margin-left: 10px;
-
 }
-.text img{
+
+.text img {
     float: left;
     margin: 5px;
 }
- .sub_container p{
+
+.sub_container p {
     font-size: 13px;
-   margin-left: 180px;    
+    margin-left: 180px;
 }
-.sub_container a{
+
+.sub_container a {
     color: rgb(238, 139, 73);
     font-weight: bold;
-    text-decoration: none; 
+    text-decoration: none;
 }
-.sub_container ul li{
+
+.sub_container ul li {
     list-style: none;
     margin-top: 15px;
     margin-left: 10px;
-    border-bottom: 2px dotted gray ;
+    border-bottom: 2px dotted gray;
     font-size: 13px;
 }
-.sub_container ul i{
+
+.sub_container ul i {
     color: rgb(238, 139, 73);
     margin: 5px;
 }
-.address{
-    width: 100%;
 
+.address {
+    width: 100%;
 }
-section{
-    overflow:auto;
+
+section {
+    overflow: auto;
 }
-.container_new{
+
+.container_new {
     float: left;
     width: 700px;
     margin-top: 30px;
     /* font-size: 17px; */
 }
 
-.container_new a{
+.container_new a {
     color: rgb(238, 139, 73);
     text-decoration: none;
     /* padding-bottom: 15px; */
-
 }
-.contact{
+
+.contact {
     float: left;
     margin-top: 30px;
     margin-bottom: 15px;
 }
-.contact ul{
+
+.contact ul {
     margin-top: 20px;
 }
-.contact ul li{
+
+.contact ul li {
     list-style: none;
     margin-left: 20px;
-
 }
+
+
 /* .box{
     float: left;
     background-image: url(../img/small_box.gif);
@@ -169,36 +190,167 @@ section{
     
     
 } */
-.box h5{
+
+.box h5 {
     padding-top: 40px;
     padding-left: 17px;
 }
-.left{
+
+.left {
     float: left;
     padding-top: 15px;
     padding-left: 50px;
 }
-.right{
+
+.right {
     float: left;
     padding-left: 300px;
     padding-top: 15px;
 }
-footer{
+
+footer {
     height: 50px;
     background-color: black;
     color: gray;
 }
 
-.rec1{
+.rec1 {
     float: left;
-    margin-left:20px;
+    margin-left: 20px;
     width: 215px;
-
 }
-.rec1 h2{
+
+.rec1 h2 {
     font-size: 15px;
 }
-.rec1 p{
+
+.rec1 p {
     font-size: 13px;
 }
 
+@media only screen and (max-width: 428px) {
+    header {
+        width: 180%;
+    }
+    header h1 {
+        padding-left: 0;
+        padding-top: 25px;
+        text-align: center;
+    }
+    header p {
+        padding-left: 0;
+        text-align: center;
+    }
+    .container {
+        width: 760px;
+    }
+    .sub_container {
+        width: 250px;
+        padding-left: 2px;
+        padding-right: 0;
+    }
+    .content1 {
+        margin-top: 0;
+    }
+    .box {
+        width: 100%;
+    }
+    .black_box {
+        width: 100%;
+        margin-left: 0;
+        height: auto;
+    }
+    .black_box img {
+        width: 100%;
+    }
+    .menu {
+        width: 100%;
+        left: 0;
+        top: 0;
+    }
+    .menu ul li {
+        margin-left: 65px;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        font-size: 15px;
+    }
+    .rec1 {
+        width: 320px;
+        margin-left: 42px;
+    }
+    .rec1 h2 {
+        font-size: 25px;
+    }
+    .rec1 p {
+        font-size: 20px;
+        padding-bottom: 20px;
+    }
+    .right {
+        padding-left: 45px;
+    }
+    .rec1 img {
+        width: 100%;
+    }
+    footer {
+        width: 180%;
+    }
+}
+
+@media only screen and (max-width:770px) {
+    .menu {
+        left: 155px;
+        top: 15px;
+    }
+    .link {
+        margin-top: 23px;
+        padding-bottom: 11px;
+    }
+    .box {
+        width: 290px;
+        margin-left: 10px;
+    }
+    .black_box {
+        width: 445px;
+        margin-left: 10px;
+    }
+    .black_box img {
+        width: 100%;
+        height: 260px;
+    }
+    .sub_container {
+        width: 210px;
+        padding-right: 45px;
+    }
+    .text {
+        font-size: 15px;
+    }
+    .rec1 {
+        margin-left: 50px;
+        width: 315px;
+        margin-bottom: 20px;
+    }
+    .rec1 img {
+        width: 100%;
+    }
+    .right {
+        padding-left: 60px;
+    }
+    .container {
+        width: 768px;
+    }
+}
+
+@media only screen and (max-width: 1027px) {
+    header h1 {
+        text-align: center;
+        padding-left: 0;
+    }
+    header p {
+        text-align: center;
+        padding-left: 0;
+    }
+    .menu {
+        top: 6px;
+        left: 311px;
+    }
+}
